package com.bubbletastic.android.ping.model.proto;

option java_package = "com.bubbletastic.android.ping.model.proto";

enum HostStatus {
    unknown = 0;
    reachable = 1;
    unreachable = 2;
    updating = 3;
}

message ProtoHost {
    optional string host_name = 1;
    optional int64 refreshed = 2;
    optional HostStatus status = 3 [default = unknown];
}

message HostsContainer {
    repeated ProtoHost hosts = 1;
}

